# a2w-control

./: .gitignore  AGENT.md  CLAUDE.md  EXPERIMENTS.md  README.md  a2w-db-2026-07-18T201512Z.sql.gz.gpg  a2w-db-2026-07-20T092912Z.sql.gz.gpg
.claude/: settings.json
.tenet/: config.json  flows.yaml  provenance-key
analytics-mirror/: .env.example  README.md  middleware.ts  package-lock.json  package.json
heatpump-bridge/: .gitignore  README.md  config.yaml  pyproject.toml
heatpump-bridge/backups/: bridge-20260706.db  bridge-20260707.db
heatpump-bridge/bridge/: __init__.py  api.py  auth.py  config.py  discovery.py  exporter.py  faults.py  guardrails.py  hub_client.py  main.py  modbus_client.py  notify.py  poller.py  registers.py  scheduler.py  span_local.py  store.py  sysstat.py  w610_config.py
heatpump-bridge/deploy/: HARDWARE-DAY.md  api-integration.md  cloudflared-notes.md  cn22-direct-probe.py  config.production.yaml  crc-probe.py  hbx-override-test.md  heatpump-bridge-update.service  heatpump-bridge-update.timer  heatpump-bridge.service  pi-bootstrap.sh  pi-setup.md  pi-update.sh  railway-hub.md  setup-remote.sh  tailscale-notes.md  verify-isolation.sh  w610-setup.md
heatpump-bridge/sim/: fake_pump.py
heatpump-bridge/tests/: test_auth.py  test_faults.py  test_guardrails.py  test_hardware_hardening.py  test_hub_client.py  test_integration.py  test_notify.py  test_registers.py  test_sysstat.py  test_w610_config.py
heatpump-bridge/ui/: app.js  index.html  style.css
hub/: .env.example  README.md  package-lock.json  package.json  tsconfig.json
(+124 files in other folders)
