[project]
name = "heatpump-bridge"
version = "0.1.0"
description = "Modbus control bridge for Arctic/Macon MAHRW030ZA air-to-water heat pumps"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pymodbus>=3.9",
    "pydantic-settings>=2.4",
    "pyyaml>=6.0",
    "websockets>=13",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bridge"]
